# document-sanity

./: .gitignore  CLAUDE.md  README.md  gwas-bounds-sketch.md  pyproject.toml  references.bib
Figures/: manifest.example.json  manifest.json
Manuscripts/: cross-disease-mechanisms.tex  general-gene-set-enrichment.tex  indirect-support.tex  pigean-methods.tex
Tables/: validation_trait_information.tex
agentic-resources/: system_prompt.md
docs/: BUILD_SYSTEM.md  CANVA_BRANDING.md  QUICK_REFERENCE.md  README.md  bibliography.md  drawio-figures.md  figures.md  html-multi-plot-standard.md  html-viewer.md  preview-blocks.md  references-and-labels.md  variables-and-provenance.md  word.md
falcon_paper/: Makefile  README.md  pyproject.toml
falcon_paper/src/initial/: manifest.yaml
falcon_paper/src/initial/docs/: contents.md  falcon_overview.md  g_map_stats.md  main.md
pigean-manuscripts/: INDIRECT_SUPPORT_PLAN.md  main.tex  pyproject.toml
pigean-manuscripts/Manuscripts/: mechanisms.tex
pigean-manuscripts/Tables/: gwas_mesh_terms.tex  loco_validation.tex
pigean-manuscripts/agentic-resources/: user_prompt.md
pigean-manuscripts/docs/: CANVA.md
pigean-manuscripts/docs/examples/: variables-syntax.tex
pigean-manuscripts/scripts/: canva_auth.py  crop_figure_whitespace.py  generate_placeholders.py  variable_processor.py
pigean-manuscripts/variables/: indirect-support-variables.tex  indirect-support.json  saturation-letter.json
pigean-manuscripts/versions/indirect-support/: main_01122026.tex  main_03042026.tex  main_10072025.tex  main_11182025.tex
pigean-manuscripts/versions/saturation-letter/: main_03042026.tex
projects/falcon/templates/: article.tex
scripts/: build.py  canva_export.py  canva_manual_import.py  figure_manifest.py  make_today_version.py  migrate_variables.py
sections/indirect-support/01132026/: discovery_cycle_01132026.tex  introduction_01132026.tex  methods_overview_01132026.tex  validation_genetics_01132026.tex
sections/indirect-support/03042026/: introduction_03042026.tex  resource_description_03042026.tex
sections/indirect-support/03102026/: biological_properties_03102026.tex  extended_data_03102026.tex  methods_03102026.tex  methods_overview_03102026.tex  validation_genetics_03102026.tex
sections/indirect-support/03302026/: discussion_03302026.tex  introduction_03302026.tex  resource_description_03302026.tex  supplementary_03302026.tex  validation_pharma_03302026.tex
sections/indirect-support/09262025/: geneset_libraries_09262025.tex  validation_genetics_09262025.tex
src/document_sanity/: __init__.py  build.py  cli.py  docx_builder.py  docx_content.py  docx_extract.py  docx_styles.py  docx_template.py  docx_xml.py  drawio_fig.py  html_builder.py  init.py  latex2md.py  make_version.py  manifest.py  md2docx.py  md2html.py  md2latex.py  plotly_html.py  preview.py  variable_processor.py  version.py
src/latex_builder/: __init__.py  bib.py  build.py  cli.py  figure_crop.py  figure_manifest.py  html_builder.py  init.py  latex2md.py  manifest.py  md2html.py  md2latex.py  plotly_html.py  preview.py  variable_processor.py  version.py
tests/: test_drawio_fig.py  test_formats.py  test_manifest_abstract.py  test_md2html.py  test_md2latex.py  test_resolve_figure.py  test_variable_processor.py
versions/indirect-support/: main_01132026.tex  main_03102026.tex  main_03302026.tex  main_09262025.tex  main_09292025.tex  main_10012025.tex
versions/saturation-letter/: main_03102026.tex
(+37 files in other folders)
