[project]
name = "latex-builder"
version = "0.1.0"
description = "Build LaTeX documents from Markdown source files with variable substitution, figure management, and versioned builds."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "coolname>=4.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
figures = [
    "pillow>=10.0.0",
]

[project.scripts]
latex-builder = "latex_builder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/latex_builder"]
