[project]
name = "document-sanity"
version = "0.1.0"
description = "Build PDF (LaTeX), interactive HTML, and Word (.docx) documents from a single Markdown source of truth — with variable substitution, figure management, and versioned builds."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "coolname>=4.0.0",
    "pyyaml>=6.0",
    # Auto-cropping whitespace from raster figures during build. Soft-imported
    # in figure_crop.py so missing Pillow degrades to plain copy rather than
    # erroring out — but installing it is strongly recommended. Also used by
    # the Word output to size embedded images.
    "pillow>=10.0.0",
    "numpy>=1.24",
]

[project.scripts]
document-sanity = "document_sanity.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/document_sanity"]
